# tinyminiscript

./: .gitignore  Cargo.toml  README.md  analyze_miniscript.rs  analyze_miniscript.sh  flake.nix  run_test.sh
afl/: Cargo.toml  crashes.sh  run.sh
afl/in/: script0  script1  script2  script3  script4  script5
afl/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parsing.rs  script.rs
kani/: Cargo.toml
kani/src/: main.rs
src/: ast_printer.rs  checksum.rs  context.rs  descriptor.rs  error.rs  lexer.rs  lib.rs  limits.rs  macros.rs  model.rs  parser.rs  satisfy.rs  script.rs  serialize.rs  translator.rs  type_checker.rs  visitor.rs
src/parser/: keys.rs  mod.rs
src/utils/: checksum.rs  macros.rs  mod.rs  serialize.rs
tests/: Cargo.toml
tests/src/: ast_printer.rs  main.rs  visitor.rs
